Add logic for endpoint which total spend per month for a year from current date